Add share cocktail endpoint
